--- a/Gest/AndroidManifest.xml
+++ b/Gest/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-     	<activity android:name="com.js.gest.GestActivity" >
+     	<activity android:name="com.js.gestApp.GestActivity" >
       		<intent-filter>
         		<action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
